# rdam_green_space_monitoring

./: .gitignore  .gitmodules  .pre-commit-config.yaml  README.md  azure-pipelines.yml  environment.yml  pull_request_template.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: main.yml
aml_deployments/: Dockerfile  pipeline.yml  pipeline_parallel.yml
aml_deployments/batch/: batch-endpoint.yml  batch-pipeline-deployment.yml  batch-pipeline-job.yml  batch-pipeline.yml  inputs.yml
aml_deployments/components/component_a/: component.yml  component_a_script.py
aml_deployments/components/component_b/: component.yml  component_b_script.py
aml_deployments/components/package_c/: package_c_script.py
aml_deployments/environments/example_package/: conda.yml  environment.yml
aml_deployments/online/: online-deployment.yml  online-endpoint.yml
aml_deployments/pc_ops/: dist_pc_ops_script.py  env_vars.sh  pc_ops.yml  pc_ops_dist.yml  pc_ops_merge.yml  pc_ops_parallel_merge_script.py  pc_ops_script.py
aml_deployments/pc_prep/: parallel_pc_prep_script.py  pc_prep.yml  pc_prep_merge.yml  pc_prep_parallel_merge_script.py  pc_prep_parallel_plan_script.py  pc_prep_plan.yml  pc_prep_script.py
aml_deployments/pc_segment/: parallel_pc_segment_script.py  pc_segment.yml  pc_segment_merge.yml  pc_segment_parallel_merge_script.py  pc_segment_parallel_plan_script.py  pc_segment_plan.yml  pc_segment_script.py
aml_deployments/sam_model/: sam_model.yml
aml_deployments/scheduled_pipeline/: pipeline_job.yml  schedule.yml
aml_deployments/tree_modeling/: parallel_tree_modeling_script.py  tree_modeling.yml  tree_modeling_merge.yml  tree_modeling_parallel_merge_script.py  tree_modeling_parallel_plan_script.py  tree_modeling_plan.yml  tree_modeling_script.py
devops_pipelines/scripts/: invoke_batch_endpoint.py
devops_pipelines/templates/: batch_deployment.yml  batch_update.yml  config.yml  create_components.yml  create_environments.yml  install_and_configure_python.yml  keyvault.yml  main.yml  online_deployment.yml  online_update.yml  pre_commit.yml  schedule_online_deployment.yml  scheduled_pipeline_deployment.yml  use_keyvault_template.yml
